objects/LOTUS_Denied_Countries_And_Cities__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting has been created for story DPS-4661. We are using this in Embargo check formula field(checkbox) to show alert on lead object based on city and country of lead address.</description>
    <fields>
        <fullName>Cities_Name1__c</fullName>
        <label>Cities Name1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cities_Name2__c</fullName>
        <label>Cities Name2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cities_Name3__c</fullName>
        <label>Cities Name3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <type>TextArea</type>
    </fields>
    <label>LOTUS Denied Countries And Cities</label>
</CustomObject>